CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(sdl2test)

ADD_EXECUTABLE(sdl2test sdl2test.c)

# Without FindSDL2.cmake
INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
# WITH FindSDL2.cmake
#find_package(SDL2 REQUIRED)
#include_directories(${SDL2_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(sdl2test ${SDL2_LIBRARIES})
